--- a/mal-rs/Cargo.toml
+++ b/mal-rs/Cargo.toml
@@ -13,3 +13,4 @@ serde_urlencoded = "0.7.1"
 url = "2.4.0"
 enum-from-struct = { path = "../enum-from-struct" }
 reqwest = { version = "0.11.18", features = ["serde_json"] }
+async-trait = "0.1.68"
