--- a/enum-from-struct/Cargo.toml
+++ b/enum-from-struct/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 quote = "1.0.28"
+strum = { version = "0.25.0", features = ["strum_macros"] }
+strum_macros = "0.25.0"
 syn = "2.0.18"
 
 [lib]
