--- a/mal-rs/Cargo.toml
+++ b/mal-rs/Cargo.toml
@@ -14,3 +14,5 @@ url = "2.4.0"
 enum-from-struct = { path = "../enum-from-struct" }
 reqwest = { version = "0.11.18", features = ["serde_json"] }
 async-trait = "0.1.68"
+strum = { version = "0.25.0", features = ["strum_macros"] }
+strum_macros = "0.25.0"
