--- a/examples/cli/Cargo.toml
+++ b/examples/cli/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 [dependencies]
 dotenv = "0.15.0"
 tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread"] }
-mal-rs = { path = "../../mal-rs" }
+mal-rs = { path = "../../mal-rs", features = ["user"]}
