--- a/mal-rs/Cargo.toml
+++ b/mal-rs/Cargo.toml
@@ -2,6 +2,7 @@
 name = "mal-rs"
 version = "0.1.0"
 edition = "2021"
+authors = ["dobecad"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -16,3 +17,11 @@ reqwest = { version = "0.11.18", features = ["serde_json"] }
 async-trait = "0.1.68"
 strum = { version = "0.25.0", features = ["strum_macros"] }
 strum_macros = "0.25.0"
+
+[features]
+default = ["anime", "manga"]
+all = ["anime", "manga", "forum", "user"]
+anime = []
+manga = []
+forum = []
+user = []
