--- a/enum-from-struct/Cargo.toml
+++ b/enum-from-struct/Cargo.toml
@@ -2,6 +2,7 @@
 name = "enum-from-struct"
 version = "0.1.0"
 edition = "2021"
+authors = ["dobecad"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
