Added anime only example, updated parameter order

--- a/examples/anime/Cargo.toml
+++ b/examples/anime/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
 mal-rs = { path = "../../mal-rs", features = ["anime"] }
+dotenvy = "0.15.7"
