--- a/examples/forum/Cargo.toml
+++ b/examples/forum/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
-mal-rs = { path = "../../mal-rs", features = ["forum"]}
+mal-rs = { path = "../../mal-rs", features = ["forum"] }
+dotenvy = "0.15.7"
