--- a/examples/manga/Cargo.toml
+++ b/examples/manga/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
-mal-rs = { path = "../../mal-rs", features = ["manga"]}
+mal-rs = { path = "../../mal-rs", features = [
+    "manga",
+], default-features = false }
+dotenvy = "0.15.7"
