--- a/mal-rs/Cargo.toml
+++ b/mal-rs/Cargo.toml
@@ -16,6 +16,7 @@ reqwest = { version = "0.11.18", features = ["serde_json"] }
 async-trait = "0.1.68"
 strum = { version = "0.25.0", features = ["strum_macros"] }
 strum_macros = "0.25.0"
+toml = "0.7.6"
 
 [features]
 full = ["forum", "user"]
