--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["mal-rs", "examples/*"]
-default-members = ["mal-rs"]
+members = ["mal-api", "examples/*"]
+default-members = ["mal-api"]
