--- a/examples/cli-auth/Cargo.toml
+++ b/examples/cli-auth/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
-mal-rs = { path = "../../mal-rs" }
+mal-api = { path = "../../mal-api" }
 dotenvy = "0.15.7"
