--- a/examples/user/Cargo.toml
+++ b/examples/user/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
-mal-rs = { path = "../../mal-rs", features = ["user"] }
+mal-api = { path = "../../mal-api", features = ["user"] }
 dotenvy = "0.15.7"
