--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,7 @@ on:
   push:
     tags:
       - "v*" # Trigger the workflow on new Git tags (e.g., v0.1.0)
+  workflow_dispatch:
 
 jobs:
   build_and_publish:
